--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -7,6 +7,9 @@
   html,
   body {
     @apply bg-white dark:bg-gray-950;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
   }
 }
 
