--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@layer base {
+  @font-face {
+    font-family: 'BBH Bogle';
+    src: url('/fonts/BBHBogle-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+  }
+}
+
 @layer base {
 
   html,
